// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toc/buildMenuSection > should build a menu and highlight current page 1`] = `
[
  {
    "defaultOpenState": false,
    "hasChildren": false,
    "highlight": "active",
    "id": "bar",
    "level": 0,
    "parentId": "root",
    "title": "Bar",
    "url": "/bar.html",
  },
  {
    "defaultOpenState": false,
    "hasChildren": false,
    "highlight": undefined,
    "id": "baz",
    "level": 0,
    "parentId": "root",
    "title": "Baz",
    "url": "/baz.html",
  },
  {
    "defaultOpenState": false,
    "hasChildren": false,
    "highlight": undefined,
    "id": "foo",
    "level": 0,
    "parentId": "root",
    "title": "Foo",
    "url": "/foo.html",
  },
]
`;

exports[`toc/buildMenuSection > should build a menu even if there are no current page 1`] = `
[
  {
    "defaultOpenState": false,
    "hasChildren": false,
    "highlight": undefined,
    "id": "bar",
    "level": 0,
    "parentId": "root",
    "title": "Bar",
    "url": "/bar.html",
  },
  {
    "defaultOpenState": false,
    "hasChildren": false,
    "highlight": undefined,
    "id": "baz",
    "level": 0,
    "parentId": "root",
    "title": "Baz",
    "url": "/baz.html",
  },
  {
    "defaultOpenState": false,
    "hasChildren": false,
    "highlight": undefined,
    "id": "foo",
    "level": 0,
    "parentId": "root",
    "title": "Foo",
    "url": "/foo.html",
  },
]
`;

exports[`toc/buildMenuSection > should build a nested menu 1`] = `
[
  {
    "defaultOpenState": false,
    "hasChildren": false,
    "highlight": undefined,
    "id": "bar_install",
    "level": 0,
    "parentId": "bar",
    "title": "Bar: Install",
    "url": "/bar-install.html",
  },
  {
    "defaultOpenState": false,
    "hasChildren": false,
    "highlight": "active",
    "id": "bar_features",
    "level": 0,
    "parentId": "bar",
    "title": "Bar: Features",
    "url": "/bar-features.html",
  },
]
`;

exports[`toc/buildMenuSection > should build an empty menu if there are no top level ids  1`] = `[]`;

exports[`toc/buildMenuSection > should expand all sections while filtering 1`] = `
[
  {
    "defaultOpenState": true,
    "hasChildren": true,
    "highlight": undefined,
    "id": "bar",
    "level": 0,
    "parentId": "root",
    "title": "Bar",
    "url": "/bar.html",
  },
  {
    "defaultOpenState": true,
    "hasChildren": true,
    "highlight": undefined,
    "id": "bar_features",
    "level": 0,
    "parentId": "bar",
    "title": "Bar: Features",
    "url": "/bar-features.html",
  },
  {
    "defaultOpenState": false,
    "hasChildren": false,
    "highlight": undefined,
    "id": "bar_features_beer",
    "level": 0,
    "parentId": "bar_features",
    "title": "Bar Features: Beer",
    "url": "/bar-features-beer.html",
  },
]
`;

exports[`toc/buildMenuSection > should filter pages 1`] = `
[
  {
    "defaultOpenState": false,
    "hasChildren": false,
    "highlight": "active",
    "id": "bar",
    "level": 0,
    "parentId": "root",
    "title": "Bar",
    "url": "/bar.html",
  },
  {
    "defaultOpenState": false,
    "hasChildren": false,
    "highlight": undefined,
    "id": "baz",
    "level": 0,
    "parentId": "root",
    "title": "Baz",
    "url": "/baz.html",
  },
]
`;

exports[`toc/buildMenuSection > should show page children 1`] = `
[
  {
    "defaultOpenState": true,
    "hasChildren": true,
    "highlight": "active",
    "id": "bar",
    "level": 0,
    "parentId": "root",
    "title": "Bar",
    "url": "/bar.html",
  },
  {
    "defaultOpenState": false,
    "hasChildren": false,
    "highlight": undefined,
    "id": "baz",
    "level": 0,
    "parentId": "root",
    "title": "Baz",
    "url": "/baz.html",
  },
  {
    "defaultOpenState": false,
    "hasChildren": false,
    "highlight": undefined,
    "id": "foo",
    "level": 0,
    "parentId": "root",
    "title": "Foo",
    "url": "/foo.html",
  },
]
`;
